Id found and printed

--- a/web/inner-pages/customWeatherTrigger1.html
+++ b/web/inner-pages/customWeatherTrigger1.html
@@ -5,7 +5,7 @@
     <link href="css/custonWeatherTrigger1/customWeather.css" rel="stylesheet" type="text/css">
     <script src="css/custonWeatherTrigger1/customWeather.js"></script>
 </head>
-<body>
+<body ng-controller="customWeatherActionControllerTrigger1">
 
 <h2 class=""><b>Local Weather App</b></h2>
 
@@ -122,6 +122,7 @@
             </div>
         </div>
     </center>
+    <button id="but" type="submit" class="btn btn-primary">Submit</button>
 </div>
 </body>
 </html>
